Fri Mar 17 09:22:54 GMT 2006  Olly Betts <olly@survex.com>

	* api/vectortermlist.h,backends/net/net_termlist.cc,
	  backends/net/net_termlist.h,common/alltermslist.h,common/termlist.h,
	  matcher/branchtermlist.h: Make TermList::positionlist_begin() pure
	  virtual and put dummy implementations in BranchTermList and other
	  subclasses which can't (or don't) implement it.  This makes it
	  hard to accidentally fail to implement it in a backend's TermList
	  subclass.
	* backends/net/net_termlist.h: positionlist_begin() now throws
	  UnimplementedError instead of InvalidOperationError.

Fri Mar 17 08:46:52 GMT 2006  Olly Betts <olly@survex.com>

	* api/omdatabase.cc: There's no need for the MultiTermList wrapper in
	  the common case where we're only dealing with a single database.

Fri Mar 17 07:54:54 GMT 2006  Olly Betts <olly@survex.com>

	* backends/net/net_termlist.h: Remove unused "positions" member.

Fri Mar 17 07:07:57 GMT 2006  Olly Betts <olly@survex.com>

	* backends/multi/multi_termlist.cc,backends/multi/multi_termlist.h,
	  tests/api_posdb.cc: Fix TermIterator::positionlist_begin() to work
	  on TermIterator from Database::termlist_begin().

Fri Mar 17 03:47:04 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/enquire.h: Fix "unused parameter" warning from
	  previous change.

Thu Mar 16 05:20:16 GMT 2006  Olly Betts <olly@survex.com>

	* api/omenquire.cc,include/xapian/enquire.h:  Move 
	  Enquire::get_matching_terms_end() inline in header.

Thu Mar 16 04:28:20 GMT 2006  Olly Betts <olly@survex.com>

	* api/omdocument.cc,configure.ac,include/xapian/document.h: Move
	  Document::termlist_end() inline in header.

Fri Mar 10 04:55:57 GMT 2006  Olly Betts <olly@survex.com>

	* INSTALL: Improve wording.

Fri Mar 10 04:49:09 GMT 2006  Olly Betts <olly@survex.com>

	* backends/quartz/bcursor.h: Fix incorrect method name in
	  documentation comment.

Fri Mar 10 04:39:45 GMT 2006  Olly Betts <olly@survex.com>
